Added some content and addressed notes throughout thesis
Conflicts:
	background.tex
	proposedWork.tex
	proto2.1.tex

--- a/embedding.tex
+++ b/embedding.tex
@@ -24,7 +24,7 @@ includes information on some other implementations and embedding languages in ge
 
 \section{The Informal Content from Blogs, Articles and Internet Discussions}
 
-Before moving on to the formal content such as publications, modules and libraries\yyy{}{\Large,} let's take a look
+Before moving on to the formal content such as publications, modules and libraries, let's take a look
 at some of the unofficially published content.
 This subsection takes a look at the information, thoughts and discussions that are currently taking place from time
 to time on the internet.
@@ -58,17 +58,18 @@ with, but still lacks complete list support\endnote{%
   defined either of these terms.}\newline
   \mehul{I forgot}.
 }
-and a lot of practical features that \progLang{Prolog} has.
+and quite a few of practical features that \progLang{Prolog} has.
 This seems to be a common problem with the other implementation that exists, \cite{website:takashi-workplace}.
 
 Adding fuel to fire, is the question on \progLang{Prolog}'s existence and survival
 \cite{website:prolog-killer,website:prolog-steam,website:prolog-death,somogyi1995logic} since its use in industry
-is far scarcer{%
+is minimal{%
   ``far scarcer''?
   \mehul{minimal}.
   \david{``\textsl{Its use in industry is minimal than the leading languages\dots}'' makes no sense.}
+  \mehul{Changed}
 }
-than the leading languages of other paradigms.
+in comparison the languages of imperative nature.
 The purely declarative nature lacks basic requirements such as support for \languageConstruct{modules}.\endnote{%
   Do you mean that basic \progLang{Prolog} implementations lack modules;
   or that \progLang{Prolog} lacks \languageConstruct{modules} because it is purely
@@ -81,7 +82,7 @@ family of Declarative Languages.\eref{caps-choices}\textsuperscript{,}\endnote{%
   competing with \progLang{Haskell}?
   }\par
   \mehul{
-  Well \progLang{Haskell} has a lot of advantages over \progLang{Prolog} despite being from the same paradigm
+  \progLang{Haskell} has advantages over \progLang{Prolog} despite being from the same paradigm
   \newline
   So a choice has to be made for a declarative language why not \progLang{Haskell} ?}
 
@@ -94,8 +95,8 @@ family of Declarative Languages.\eref{caps-choices}\textsuperscript{,}\endnote{%
   }
 }
 Not to forget \progLang{Haskell} also has some tricks \cite{website:logic-programming-haskell} up its sleeve which
-enables encoding of search problems\yyy{}{in \progLang{Haskell} rather than
-\progLang{Prolog}}.\eref{not-a-sentence}\textsuperscript{,}\endnote{% 
+enables encoding of search problems in \progLang{Haskell} rather than
+\progLang{Prolog}.\eref{not-a-sentence}\textsuperscript{,}\endnote{% 
   \david{I have lost track of the general argument here.
   What is the unofficially published content saying about \progLang{Prolog} here?}
 
