--- a/introduction.tex
+++ b/introduction.tex
@@ -37,7 +37,7 @@ Perhaps one does not need to choose!
 This document looks at the attempts, improvements and future possibilities of uniting \progLang{Haskell}, a purely
 functional programming language and \progLang{Prolog}, a logical programming language so that one is not forced to
 choose.
-The task at hand involves replicating \progLang{Prolog} like\eref{language-like} features in \progLang{Haskell} such as unification and
+The task at hand involves replicating \progLang{Prolog}-like\eref{language-like} features in \progLang{Haskell} such as unification and
 a single typed system.
 The thesis aims at leveraging the features of the host language in order to incorporate logic programming features
 resulting in extending \progLang{Haskell} with capabilities like unification.
@@ -112,7 +112,7 @@ declarative nature.
 Some say that \progLang{Prolog} is fading away,
 \cite{website:prolog-steam,website:prolog-death,website:prolog-killer}.
 It is apparently not used for building large programs \cite{wikiprolog,somogyi1995logic,website:prolog1000db}.
-However there are a lot of good things about Prolog\endnote{%
+However there are a lot of good things about \progLang{Prolog}\endnote{%
   naked \progLang{Prolog}.
 }
 : it is ideal for search problems; it has a simple syntax, and a
@@ -136,7 +136,7 @@ Putting all of the above together, Domain Specific Languages\endnote{%
     reader to know what they are.  Should she?
     You have discussed general purpose languages somewhat, but you haven't said what you mean by ``Domain Specific
     Language'', nor have you given an example.
-    \mehul{added content for dsl}
+    \mehul{added content for dsl, please see previous paragraph}
   }%
 }
 are pretty good in doing what they are designed to do, but nothing else, resulting in choosing a different language
@@ -162,7 +162,7 @@ imperative languages.
 Many domains require the system to be mutation free, but must deal with uncontrolled side-effects and so
 on.\endnote{%
   \david{This example isn't as clear to me as the one in the last sentence.}
-  \mehul{how do I say that mathematics can be translated to declarative easily in declarative paradigm}
+  \mehul{how do I say that mathematics can be translated to program easily in declarative paradigm}
 }
 
 
