--- a/proto3.tex
+++ b/proto3.tex
@@ -11,9 +11,9 @@
 \noindent\rule{\textwidth}{0.5pt}
 %-----------------------------------------------------------------------------
 
-When two terms are to be unified we can use \yyy{}{\Huge Chapter}~\ref{proto1} ,
+When two terms are to be unified we can use Chapter~\ref{proto1},
 
-\markWord{term1} and \markWord{term2} are matched and an assignment is the result 
+\prologConstruct{term1} and \prologConstruct{term2} are matched and an assignment is the result 
 
 now this may be a part of a query resolution procedure
 
@@ -24,7 +24,7 @@ variable search strategy
 
 
 \section{Unification}
-The first, \yyy{"}{``}unification,\yyy{"}{''} regards how terms are matched and variables assigned to make terms
+The first, ``unification'' regards how terms are matched and variables assigned to make terms
 match.
 \cite{website:prologunification}
 
