added section for monad working example in relatedwork

--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -66,6 +66,11 @@ For a given functor \markWord{f} and a carrier type \markWord{a} the algebra is 
 Often this function itself is called the algebra, hence my use of the name alg in previous examples.
 
 
+\section{Monads by example: The State Monad}
+
+
+
+
 \section{Chapter Recapitulation}
 
 
