Added architecture diagram.

--- a/proto2.1.tex
+++ b/proto2.1.tex
@@ -58,6 +58,13 @@ The above is used to construct \progLang{Prolog} ``terms'' which are of a ``sing
 The implementation consists of components that one would find in a language processing system (see
 Figure~\ref{fig:A language-processing system}).
 
+\begin{figure}
+  \includegraphics[width=1\textwidth]{Prototype-2-diagram.pdf}
+\vspace*{-1cm}
+  \caption{Architecture of Prototype 2}
+  \label{fig:architecture-proto-2}
+\end{figure}
+
 \begin{figure}[th]
 \centering
 \includegraphics[scale = .95]{Language_Processing_System.png}
