split chapter 3 proposedWork.tex

--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -7,7 +7,7 @@
 \begin{document}
 
 %-----------------------------------------------------------------------------
-\chapter{Current and Accomplished Work}\label{chap:proposedWork}
+\chapter{Current}\label{chap:proposedWork}
 %-----------------------------------------------------------------------------
 
 \textcolor{blue}{\textsl{I suspect that the title of this chapter needs to change.}}
@@ -135,151 +135,6 @@ Mostly, the trend is to build a library for extension to replicate the features 
 Taking into consideration the above, there is quite some room for improvement and additions.\endnote{%
   Try completely rephrasing this sentence.
 }
-\section{Proposal Contributions}
-
-Moving onto what this thesis shall explore, first thing's first a complete, fully functional library which comes
-close to a \progLang{Prolog}-like language and has practical abilities to carry out real-world
-tasks.
-They include predicates such as \prologConstruct{cut}\endnote{%
-  Write macros like \macroName{progLang} for the various classes
-  of special symbols in your thesis, and then apply them to words like
-  ``fail'', which when used as a \progLang{Prolog} word, should be
-  typeset as \texttt{\char`\\prologCode\char`\{fail\char`\}}, or some such.
-}\elabel{text-kind}
-, \prologConstruct{assert}, \prologConstruct{fail}, \prologConstruct{setOf}, \prologConstruct{bagOf} among others.
-This forms\endnote{%
-  Not ``would form''.  ``forms'' perhaps.  You are talking about what \textbf{is} in the thesis.
-}
-the first stage of the implementation.
-Secondly, exploring aspects such as \prologConstruct{assert} and database capabilities.\endnote{%
-  \david{Strike this?}\newline
-  \mehul{well we/ the library does some of this right ?}
-}\textsuperscript{,}\endnote{%
-  This is not a complete sentence.
-}
-A third question to address is the accommodation of input and output, specifically dealing with the \markWord{IO
-  Monad} in \progLang{Haskell} with \progLang{Prolog} \languageConstruct{IO}.\endnote{%
-  Make this clearer. Perhaps\par\vspace{-1\baselineskip}
-  \begin{quote}\slshape
-    A third question to address is the accommodation of input and
-    output.
-    More specifically, \progLang{Prolog}
-    uses \textit{ad hoc} side effects to accomplish input and output,
-    whereas \progLang{Haskell} forces the use of the \unknownLabel{IO
-      Monad}, making it difficult to model the former in the latter.
-    \enparen{See Chapter~\ref{proto3}.}
-  \end{quote}
-  \vspace{-1\baselineskip}
-  \noindent or something similar.
-}
-Moreover, \progLang{Prolog} is an untyped language which allows lists with elements of different types to be
-created.
-Something like this is not by default in \progLang{Haskell}.
-Hence syntactic support for the same is the next question to address.
-Furthermore, experimenting with how programs expressed with same declarative meaning differ
-operationally.\eref{not-a-sentence} 
-Lastly, how would characteristics of hybrid languages fit into and play a role in an embedded
-setting.\eref{not-a-sentence} 
-
-
-\section{Improved Contributions}
-\begin{enumerate}
-\item
-  Most languages have a recursive abstract syntax which restricts the eDSL\endnote{%
-    Have we defined ``eDSL'' yet?  If not, write
-    ``\textsl{embedded, domain-specific language \enparen{eDSL}}''.
-}
-  in terms of its capability to \textit{open up} the language, i.e, to include meta syntactic
-  variables, custom quantifiers and logic.
-  (\chapterReference{proto1}{Prototype 1}) provides a methodology to convert a language whose recursive abstract
-  syntax is represented by a tree into a non-recursive version whose fixed point is isomorphically equivalent to
-  the original type.
-  One of the outcomes is a producing a polymorphically typed embedded language within \progLang{Haskell}.
-
-  To test it out we adopt the closed \progLang{Prolog}-like language defined in \cite{prolog-lib} and open it up.
-  As for the unification part we use \cite{unification-fd-lib}, which provides a generic unification algorithm
-  implementation encapsulated into a monad.
-
-\item
-  (\chapterReference{proto2.1}{Prototype 2}) does the what a \progLang{Prolog} query resolver would do given a
-  query and a knowledge base.
-  The mechanism for the same is adopted from \cite{prolog-lib}.
-  The embedded language is modified as per the procedure in (\chapterReference{proto1}{Prototype 1}) and the
-  monadic unification part is plugged into the existing architecture to demonstrate that it is independent of the
-  other components.
-  Lastly the result is converted into the original language via a translate function.
-
-\item
-  (\chapterReference{proto3}{Prototype 3}) demonstrates the modularity of the unification process of the query
-  resolver with multiple search strategies.
-
-\item
-  (\chapterReference{proto4}{Prototype 4}) throws light on how IO operations can be embedded into the abstract
-  syntax of a DSL which when interpreted would produce output consisting of a pure set of instructions irrespective
-  of the nature of the construct.
-  The effects are only produced only when the actions are executed.
-\end{enumerate}
-
-
-
-\section{Thesis Improved Contributions}
-
-\begin{enumerate}
-\item Prototype 1 does
-flattening language
-opening up the language (binding monad)
-adding custom variables
-monadic unification (stuff happens in a bubble)
-rec type $\rightarrow$ non rec type $\rightarrow$ fix non rec type isomorphically == rec type
-
-You can make an Flatterm int
-
-but you cannot make term int
-
-adding quantifiers
-
-
-\item Prototype 2 does
-extends current prolog-0.2.0.1
-this is to show that we can plug out approach into existing implementation and things work
-
-\item Prototype 3 does
-variable search strategy
-what ever method you do for searching at the point of unification you can do it with our approach
-
-\item Prototype 4 does
-how can io be squeezed into this model where whenever the resolver encounters an io operation it generates a thunk (sort of unsolved
-statement) which when executed would result in a side effect but till that point every thing is pure
-
-\end{enumerate}
-
-
-\section{What work was done in terms of points}
-\begin{enumerate}
-\item Literature review on eDSL's.
-
-\item Short survey on multi paradigm declarative languages.
-
-\item Accumulated and evaluated \progLang{Prolog} in \progLang{Haskell}.
-
-\item Defined a procedure to open up a language starting from a generic recursive abstract syntax.
-
-\item Made a few libraries to work together.
-
-\item Some stuff for monadic unification.
-
-\item Something to show it was modular and independent of the original grammar.
-
-\item
-  Something to show that the unification part is independent of the search strategy and hence multiple ones can be
-  used, possibly simultaneously to find a solution.
-
-\item
-  Creating a micro language to represent and encapsulate IO operation in an eDSL so that the it remains pure even
-  after interpretation and only produces side effects when the action is actually executed and hence in some way it
-  can be controlled.
-
-\end{enumerate}
 
 
 \section{Chapter Recapitulation}
